LabasCode/multus/15-kind-multi-networkpolicy-macvlan/2-icmp-multi-networkpolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mpicmp
  namespace: default
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-conf-1
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    imagePullPolicy: IfNotPresent
    name: alpine
    securityContext:
      capabilities:
        add: ["NET_RAW", "NET_ADMIN"]
  restartPolicy: Always
