LabasCode/multus/15-kind-multi-networkpolicy-macvlan/3-multi-networkpolicy-tcp-srcPort81-dstPort81.yaml
# curl --local-port 81 10.10.0.21
apiVersion: v1
kind: Pod
metadata:
  name: mp1
  namespace: default
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-conf-1
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    imagePullPolicy: IfNotPresent
    name: nettool
    securityContext:
      capabilities:
        add: ["NET_RAW", "NET_ADMIN"]
  nodeName: cni-multus-worker
---
# curl --local-port 81 10.10.0.21
apiVersion: v1
kind: Pod
metadata:
  name: mp2
  namespace: default
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-conf-1
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    imagePullPolicy: IfNotPresent
    name: nettool
    securityContext:
      capabilities:
        add: ["NET_RAW", "NET_ADMIN"]
  nodeName: cni-multus-worker
